@@ -4,6 +4,9 @@
 =======================================================
 
 
+28 Jan 2009      plugins are almost properly compiling. Configuration machinery
+                 updated. (AF)
+
 27 Jan 2009      plugins tree added to want distribution: useful to treat
                  external libs and interfaces to Abinit, etc. (AF)
 
